--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -12,7 +12,8 @@
         android:background="@null"
         android:hint="@string/mapsMarkerText"
         android:imeOptions="actionSearch"
-        android:textSize="15sp" />
+        android:textSize="15sp"
+        android:inputType="text"/>
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
